--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
   margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
 }
 body {
   background-color: #3c373e;
@@ -18,7 +20,6 @@ h2 {
   color: #fff;
   font-size: 20px;
   margin-bottom: 50px;
-  font-family: "Roboto", sans-serif;
   letter-spacing: 1px;
   font-weight: 500;
 }
@@ -46,9 +47,7 @@ tbody, td {
   font-size: 16px;
   padding-bottom: 20px;
   padding-top: 20px;
-  font-family: "Roboto", sans-serif;
   font-weight: 400;
-  font-style: normal;
 }
 .block {
   padding-top: 2px;
