--- a/uzduotis/07-29/2 bandymas/style.css
+++ b/uzduotis/07-29/2 bandymas/style.css
@@ -33,14 +33,17 @@ nav {
 section {
     width: 100%;
     height: 100vh;
+    justify-content:center;
     background-position: center;
     background-size: cover;
+    display: flex;
 }
 #home {
     background-image: url(img/background-images/dog1.avif);
 }
 #about {
     background-image: url(img/background-images/dog2.avif);
+    flex-direction: row-reverse;
 }
 #history {
     background-image: url(img/background-images/dog3.avif);
@@ -63,7 +66,6 @@ section {
 section img {
     width: 200px;
     height: 200px;
-    margin: 50px 0 0 250px;
 }
 h2 {
     font-size: 14px;
