--- a/uzduotis/08-02/uzduotis 1/style.css
+++ b/uzduotis/08-02/uzduotis 1/style.css
@@ -9,7 +9,7 @@ img {
     display: block;
 }
 .container {
-    height: 1230px;
+    height: 100vh;
     display: flex;
     justify-content: center;
     gap: 20px;
