--- a/uzduotis/08-02/uzduotis 2/style.css
+++ b/uzduotis/08-02/uzduotis 2/style.css
@@ -20,8 +20,8 @@ h3 {
 h1 {
   padding: 20px 0 20px 0;
 }
-img {
-  position: relative;
+.nuotrauka {
+  position: absolute;
 }
 p {
   color: #b3b3b3;
@@ -35,7 +35,7 @@ p {
   background-color: white;
   padding: 65px 80px;
   top: 20px;
-  right: 3%;
+  right: 280px;
 }
 .logo {
   position: absolute;
@@ -47,7 +47,7 @@ p {
   height: 40px;
   background-color: #47ea4e;
   top: 600px;
-  right: 320px;
+  right: 650px;
   padding: 25px 50px;
 }
 svg {
