--- a/uzduotis/08-06/uzduotis 1/style.css
+++ b/uzduotis/08-06/uzduotis 1/style.css
@@ -1,83 +1,111 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 * {
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
 }
 body {
-    background-color: #EDEEF1;
+  background-color: #edeef1;
 }
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    max-width: 1920px;
-    margin: 80px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  max-width: 1920px;
+  margin: 80px auto;
 }
 .row {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 h1 {
-    text-transform: uppercase;
-    font-size: 50px;
-    font-family: "Inter", sans-serif;
-    margin-bottom: 60px;
+  text-transform: uppercase;
+  font-size: 50px;
+  font-family: "Inter", sans-serif;
+  margin-bottom: 60px;
 }
-.frame-small, .frame-medium, .frame-big {
-    display: inline-flex;
-    gap: 20px;
-    margin-bottom: 100px;
-    /* width: 100%; */
+.frame-small,
+.frame-medium,
+.frame-big {
+  display: inline-flex;
+  gap: 20px;
+  margin-bottom: 100px;
+  /* width: 100%; */
 }
-img {
-    background-color:rgba(211, 211, 211, 0.568);
-    border-radius: 8px;
-    margin: 16px;
+img:not(.icon, .imgbig) {
+  background-color: rgba(211, 211, 211, 0.568);
+  border-radius: 8px;
+  margin: 16px;
 }
 .small {
-    width: 292px;
-    height: 292px;
-    background-color: white;
-    border-radius: 8px;
+  width: 292px;
+  height: 292px;
+  background-color: white;
+  border-radius: 8px;
 }
 .medium {
-    width: 354px;
-    height: 382px;
-    background-color: white;
-    border-radius: 8px;
+  width: 354px;
+  height: 382px;
+  background-color: white;
+  border-radius: 8px;
 }
 .frame-medium .medium img {
-    width: 322px;
-    height: 322px;
+  width: 322px;
+  height: 322px;
 }
 small {
-    display: flex;
-    justify-content: space-between;
-    line-height: 1px;
-    padding: 0 16px;
+  display: flex;
+  justify-content: space-between;
+  line-height: 1px;
+  padding: 0 16px;
 }
 span {
-    font-weight: bold;
+  font-weight: bold;
 }
 .frame-big {
-    flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 .big {
-    width: 447px;
-    height: 574px;
-    background-color: white;
-    border-radius: 8px;
+  width: 447px;
+  height: 574px;
+  background-color: white;
+  border-radius: 8px;
 }
 .frame-big .big img.imgbig {
-    width: 415px;
-    height: 415px;
+  width: 415px;
+  height: 415px;
 }
 .frame-big .big .stars img.icon {
-    display: inline-flex;
-    width: 16px;
-    height: 16px;
-    margin: 0;
+  width: 16px;
+  height: 16px;
+  margin: 0;
+}
+.stars {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+}
+.rating-price,
+.name,
+.type,
+.add {
+  width: 447px;
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 16px;
+}
+.imgbig {
+  background-color: rgba(211, 211, 211, 0.568);
+  border-radius: 8px;
+  margin: 16px 16px 0 16px;
+}
+.type {
+    font-size: 12px;
+}
+.dropdown {
+    width: 63px;
+    height: 37px;
+    border-radius: 8px;
 }
