--- a/uzduotis/08-07/uzduotis1/css/style.css
+++ b/uzduotis/08-07/uzduotis1/css/style.css
@@ -4,7 +4,6 @@
 * {
     box-sizing: border-box;
 }
-
 :root {
     --ff-main: "Poppins", sans-serif;
     --ff-Spectral: "Spectral";
@@ -13,19 +12,14 @@
     --color-white: #FFFFFF;
     --max-width: 87.5rem;
 }
-
 body {
-    /* width: var(--max-width); */
-    /* width: 100%; */
     margin: 0 auto;
     font-family: var(--ff-main);
-    /* position: relative; */
 }
 header {
-    /* width: 100%; */
+
     max-width: var(--max-width);
-    /* min-width: 360px; */
-    height: 5.5rem;
+     height: 5.5rem;
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
@@ -66,6 +60,7 @@ header .right-side .icon img {
     flex-direction: column;
     gap: 4px;
     cursor: pointer;
+    position: relative;
 }
 .hamburger-menu::before,
 .hamburger-menu::after, 
@@ -88,16 +83,14 @@ header .right-side .icon img {
     min-width: 430px;
     max-height: 888px;
     top:0;
-    right: 0;
+    right: 200px;
     color: var(--color-black);
     background-color: var(--color-white);
     z-index: 3;
     margin: 0;
     list-style: none;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: left; */
     visibility: hidden; 
+    transition: transform .5s ease-in-out;
 }
 .menu nav {
     display: flex;
@@ -122,7 +115,6 @@ header hr {
     margin-bottom: 19px;
 }
 .hamburger-menu:has(input:checked) + .menu {
-    /* display:flex;    */
     visibility: visible;
 }
 
@@ -177,7 +169,6 @@ body:has(#check:checked) .overlay {
 }
 .overlay {
     position: absolute;
-    /* min-height: 116.5%; */
     width: 100%;
     height: 100%;
     background: var(--color-black);
@@ -190,12 +181,9 @@ body:has(#check:checked) .overlay {
 .frame-1 .logo {
     text-align: center;
     margin: -50px auto 0;
-    /* width: 100%; */
 }
 .frame-1 .logo img {
-    /* max-width: 562px; */
     object-fit: contain;
-
 }
 .main-middle-text {
     max-width: var(--max-width);
@@ -246,13 +234,13 @@ body:has(#check:checked) .overlay {
     text-align: center;
 }
 .frame-2 .right-side {
-    margin:0 auto;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 40px;
 }
-.right-side .card {
+.frame-2 .right-side .card {
     display: flex;
     flex-direction: column;
     width: calc(50% - 20px)
@@ -262,7 +250,7 @@ body:has(#check:checked) .overlay {
     font-weight: 300;
     line-height: 15.4px;
     letter-spacing: 1.1px;
-    margin: 12px auto 16px;
+
 }
 .right-side .card p {
     font-family: Spectral;
@@ -280,13 +268,13 @@ body:has(#check:checked) .overlay {
     margin-bottom: 100px;
 }
 .all-stories, .buy-now {
-    width: 128px;
+    max-width: 148px;
     text-align: center;
     padding: 8px 23px;
     border: 1px solid var(--color-black);
 }
 .all-stories {
-    margin: 0 auto 114px;
+   margin: 0 auto 114px;
 }
 .all-stories a {
     text-decoration: none;
@@ -386,7 +374,6 @@ hr {
     margin-bottom: 3rem;
 }
 .frame-5 .box {
-    /* width: 100%; */
     max-width: var(--max-width);
     display: flex;
     align-items: top;
@@ -408,8 +395,6 @@ hr {
 }
 .frame-6 .text-box {
     width: 100%;
-    /* max-width: 823px; */
-    /* margin: 0 auto; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -453,16 +438,11 @@ hr {
 }
 .frame-7 .box {
     display: flex;
-    flex-wrap: wrap;
     max-width: var(--max-width);
     margin: 0 auto;
     justify-content: center;
     gap: 20px;
     margin-bottom: 95px;
-}
-.frame-7 .box .card {
-    display: flex;
-    flex-direction: column;
 }
 .frame-8 {
     height: 1002px;
@@ -608,18 +588,9 @@ input[type="email"] {
     justify-content: left;
     gap:87px;
 }
-
 .gap20 {
     gap: 20px;
 }
 .gap24 {
     gap: 24px;
 }
-
-/* 
-@media (width < 360) {
-    * {
-        min-width: 360px;
-        width: 100%;
-    }
-} */
