--- a/uzduotis/08-30/style.css
+++ b/uzduotis/08-30/style.css
@@ -21,6 +21,7 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 3rem;
+    cursor: pointer;
 }
 .box:nth-child(3), :nth-child(6), :nth-child(9) {
     border-right: none;
