--- a/uzduotis/08-30/style.css
+++ b/uzduotis/08-30/style.css
@@ -2,6 +2,9 @@ body {
     height: 100vh;
     margin: 0;
     background-color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .game {
     margin: 100px auto;
@@ -22,7 +25,6 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 3rem;
-
 }
 .box:nth-child(3), :nth-child(6), :nth-child(9) {
     border-right: none;
@@ -45,4 +47,7 @@ body {
     rotate: 0deg;
     display: none;
     /* display: none; */
+}
+button {
+    padding: 1rem;
 }
