--- a/uzduotis/09-07/style.css
+++ b/uzduotis/09-07/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Arial', sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
 body {
@@ -68,7 +68,7 @@ button{
 }
 
 #user_value {
-    font-size: 2.5rem;
+    font-size: 2rem;
     color: #333;
 }
 
