--- a/uzduotis/09-07/style.css
+++ b/uzduotis/09-07/style.css
@@ -37,7 +37,7 @@ body {
 #new {
     position: absolute;
     top: 159px;
-    left: 292px;
+    left: 46%;
     background-color: #121312;
     opacity: 60%;
     color: white;
@@ -74,7 +74,7 @@ button{
 
 .value-list {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     margin-top: 20px;
 }
 
