--- a/uzduotis/09-07/style.css
+++ b/uzduotis/09-07/style.css
@@ -15,8 +15,8 @@ body {
     background-color: white;
     border-radius: 10px;
     text-align: center;
-    width: 30%;
-    height: 430px;
+    width: 26%;
+    height: 380px;
     position: relative;
     border: 1px solid #e3e3e5;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -60,7 +60,7 @@ button{
 #userTitle {
     font-size: 1rem;
     color: #777;
-    margin-top: 8rem;
+    /* margin-top: 8rem; */
 }
 
 #user_value {
@@ -71,7 +71,7 @@ button{
 .value-list {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
 
 .value-list li {
