--- a/uzduotis/09-11/style.css
+++ b/uzduotis/09-11/style.css
@@ -1,11 +1,10 @@
 
-
 .container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+ 
     
 }
 form {
@@ -17,7 +16,8 @@ form {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap:  4em;
+    gap: 2rem;
+
 }
 img {
     max-width: 300px;
