--- a/uzduotis/09-12/style.css
+++ b/uzduotis/09-12/style.css
@@ -1,15 +1,16 @@
 
 .container{
+    width: 80%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
- 
-    
+    margin: 0 auto;    
 }
 form {
     margin: 2rem 0;
 
+}
+form.input {
+    text-align: center;
 }
 .row {
     display: flex;
@@ -33,4 +34,29 @@ li {
 }
 .back, .next {
     cursor: pointer;
+}
+
+.card {
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin-bottom: 20px;
+    display: flex;
+    width: 100%;
+}
+
+.card h4 {
+    margin-bottom: 10px;
+    padding-right: 1rem;
+    width: 30%;
+}
+
+.card .image {
+    margin-left: 20px;
+}
+
+.card .image img {
+    max-width: 100px;
+}
+.card p {
+    width: 70%;
 }
