--- a/uzduotis/10-07/bankas/front-end/src/pages/home/Home.css
+++ b/uzduotis/10-07/bankas/front-end/src/pages/home/Home.css
@@ -1,11 +1,10 @@
-.container {
-  position: relative;
+.main {
+  width: 100%;
+  height: 82vh;
+  overflow: hidden;
+  text-align: center;
 }
 
-.main {
-  position: absolute;
-  top: 400px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
+.card-img {
+  max-width: 100%;
 }
